fix Maven settings to be able to launch microservices with 'mvn spring-boot:run' command